--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 12
-      - run: npm install
-      - run: npm test
+      - name: Install
+        run: npm install
+      - name: Test
+        run: npm test
       - uses: JS-DevTools/npm-publish@v1
         with:
+          check-version: true
           token: ${{ secrets.NPM_TOKEN }}
