--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: JS-DevTools/npm-publish@v1
         with:
           check-version: true
-          token: ${{ secrets.NPM_TOKEN }}
+          token: ${{ secrets.NPM_AUTH_TOKEN }}
